Fix: Remove broken absolute paths and ensure standalone compatibility

--- a/index.html
+++ b/index.html
@@ -235,7 +235,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils/control_utils.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="/index.css">
+    <style>
+        /* Fix for GitHub Pages 404s */
+    </style>
 </head>
 <body>
 
@@ -1127,6 +1129,5 @@
         animate();
 
     </script>
-<script type="module" src="/index.tsx"></script>
 </body>
 </html>
