--- a/index.html
+++ b/index.html
@@ -295,9 +295,13 @@
          */
         const CONFIG = {
             particleCount: 40000, 
-            text1: "I",
-            text2: "LOVE",
-            text3: "YOU",
+            // text1: "I",
+            // text2: "LOVE",
+            // text3: "YOU",
+            // text4: "I LOVE YOU",
+            text1: "LA",
+            text2: "HOÀNG",
+            text3: "KHÔI",
             text4: "I LOVE YOU",
             particleSize: 0.08, 
             scatterRadius: 35,
